--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "wordplay",
   "version": "1.0.0",
   "description": "",
-  "main": "word.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node word.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Shubham-Tripathi-au45/WordPlay/issues"
   },
-  "homepage": "https://github.com/Shubham-Tripathi-au45/WordPlay#readme"
+  "homepage": "https://github.com/Shubham-Tripathi-au45/WordPlay#readme",
+  "dependencies": {
+    "express": "^4.18.1"
+  }
 }
